--- a/SportyShoeProject/SportyshoeWebParent/pom.xml
+++ b/SportyShoeProject/SportyshoeWebParent/pom.xml
@@ -19,10 +19,19 @@
         <java.version>17</java.version>
     </properties>
 
+    <modules>
+        <module>Backend</module>
+    </modules>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
         <dependency>
