Finish setting up the multi module spring boot project for Sporty shoe

--- a/SportyShoeProject/SportyshoeWebParent/pom.xml
+++ b/SportyShoeProject/SportyshoeWebParent/pom.xml
@@ -20,7 +20,7 @@
     </properties>
 
     <modules>
-        <module>BackEnd</module>
+        <module>Backend</module>
         <module>FrontEnd</module>
     </modules>
 
