--- a/SportyShoeProject/SportyshoeWebParent/Backend/pom.xml
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/pom.xml
@@ -8,8 +8,8 @@
         <artifactId>SportyshoeWebParent</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <artifactId>BackEnd</artifactId>
-    <name>BackEnd</name>
+    <artifactId>Backend</artifactId>
+    <name>Backend</name>
     <description>Sporty shoe Admin project</description>
     <properties>
         <java.version>17</java.version>
