--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/application.properties
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 # Backend server port number
-server.port=8181
+server.port=8585
 
 # Context path
 server.servlet.context-path=/ShopmeAdmin
+
+# Database connectivity
+spring.datasource.url=jdbc:mysql://localhost:3306/sportyshoedb
+spring.datasource.username=webstudent
+spring.datasource.password=webstudent
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
