--- a/SportyShoeProject/SportyshoeWebParent/pom.xml
+++ b/SportyShoeProject/SportyshoeWebParent/pom.xml
@@ -58,10 +58,17 @@
         </dependency>
 
         <dependency>
+            <groupId>com.sportyshoe</groupId>
+            <artifactId>SportyshoeCommon</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
 </project>
