--- a/SportyShoeProject/SportyshoeWebParent/Backend/pom.xml
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <artifactId>Backend</artifactId>
     <name>Backend</name>
-    <description>Sporty shoe Admin project</description>
+    <description>Sporty Shoe Admin project</description>
     <properties>
         <java.version>17</java.version>
     </properties>
