--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/application.properties
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/application.properties
@@ -14,4 +14,9 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# To solve image not displaying
+# Setting Log level
+logging.level.root=WARN
+logging.level.com.sportyshoe=DEBUG
+
+# Logging to a file
+#logging.file.name=Sportyshoe-backend.log
