--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/application.properties
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/application.properties
@@ -20,3 +20,10 @@ logging.level.com.sportyshoe=DEBUG
 
 # Logging to a file
 #logging.file.name=Sportyshoe-backend.log
+
+# Rolling log file - recommended for production.
+logging.logback.rollingpolicy.file-name-pattern=Sportyshoe-backend-%d{yyyy-MM-dd}.%i.log
+logging.logback.rollingpolicy.max-file-size=100KB
+logging.logback.rollingpolicy.total-size-cap=1MB
+logging.logback.rollingpolicy.max-history=14
+logging.logback.rollingpolicy.clean-history-on-start=true
