Category entity and repository

--- a/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/application.properties
+++ b/SportyShoeProject/SportyshoeWebParent/Backend/src/main/resources/application.properties
@@ -10,13 +10,13 @@ spring.datasource.username=webstudent
 spring.datasource.password=webstudent
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # Setting Log level
-logging.level.root=WARN
-logging.level.com.sportyshoe=DEBUG
+# logging.level.root=WARN
+# logging.level.com.sportyshoe=DEBUG
 
 # Logging to a file
 #logging.file.name=Sportyshoe-backend.log
