--- a/SportyShoeProject/SportyshoeWebParent/FrontEnd/src/main/resources/application.properties
+++ b/SportyShoeProject/SportyshoeWebParent/FrontEnd/src/main/resources/application.properties
@@ -2,4 +2,28 @@
 server.port=8081
 
 # Context path
-server.servlet.context-path=/Shopme
+server.servlet.context-path=/Sportyshoe
+
+# Database connectivity
+spring.datasource.url=jdbc:mysql://localhost:3306/sportyshoedb
+spring.datasource.username=webstudent
+spring.datasource.password=webstudent
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Setting Log level
+# logging.level.root=WARN
+# logging.level.com.sportyshoe=DEBUG
+
+# Logging to a file
+#logging.file.name=Sportyshoe-backend.log
+
+# Rolling log file - recommended for production.
+logging.logback.rollingpolicy.file-name-pattern=Sportyshoe-backend-%d{yyyy-MM-dd}.%i.log
+logging.logback.rollingpolicy.max-file-size=100KB
+logging.logback.rollingpolicy.total-size-cap=1MB
+logging.logback.rollingpolicy.max-history=14
+logging.logback.rollingpolicy.clean-history-on-start=true
